fixing .meta overflow

--- a/public/stylesheets/site.less
+++ b/public/stylesheets/site.less
@@ -74,7 +74,7 @@ ol.situations {
         color: #777;
         font-size: 1em;
         white-space: nowrap;
-        overflow-wrap: hidden;
+        overflow-x: hidden;
         text-overflow: ellipsis;
 
         > *:not(:first-child)::before {
